updates to header and about section

--- a/index.html
+++ b/index.html
@@ -3,26 +3,41 @@
     <head>
         <title>Home Page</title>
         <meta charset="utf-8">
-        
+        <script src="script.js"></script>
         <link rel="stylesheet" href="css/style.css">
-
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;600&display=swap" rel="stylesheet">
     </head>
 
 
     <body>
         <header>
             <h1>Ben Pearson</h1>
+            <nav>
+                <a href="">About Me</a>
+                <a href="">Projects</a> 
+                <a href="">Skills</a> 
+                <a href="">Contact</a> 
+            </nav>
         </header>
-
-        <nav>
-            <a href="">About Me</a>
-            <a href="">Projects</a> 
-            <a href="">Skills</a> 
-            <a href="">Contact</a> 
-        </nav>
-
         <main>
+            <h2>About Me</h2>
+            <div class="about">
+                <p> 
+                    I am a hard-working, driven, honest individual looking for an exciting new challenge. Music has
+                    been my life ever since I was a small child, whether playing, listening, studying or working. I
+                    have worked as a freelance musician and tutor for over eleven years and I am now looking for a
+                    new role to focus my passion and dedication. I am now looking to move in to the software development world and work on exciting collaborative projects
+                </p>
+                    <img id="me" src="media/images/me!!! 2.jpg" alt="picture of me">
 
+            </div>
+            <div class="projects">
+                <h2>Projects</h2>
+                <p></p>
+            </div>
         </main>
 
         <footer></footer>
