--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Home Page</title>
+        <title>Contact Info Page</title>
         <meta charset="utf-8">
         <script src="script.js"></script>
         <link rel="stylesheet" href="css/style.css">
@@ -17,10 +17,10 @@
             <h1>Ben Pearson</h1>
             <nav>
                 <ul>
-                    <li><a href="">About Me</a></li>
+                    <li><a href="/index.html">About Me</a></li>
                     <li><a href="">Projects</a> </li>
                     <li><a href="">Skills</a> </li>
-                    <li><a href="contact.html">Contact</a> </li>
+                    <li><a href="/contact.html">Contact</a> </li>
                 </ul>
 
             </nav>
