added further sections and styling

--- a/contact.html
+++ b/contact.html
@@ -18,15 +18,26 @@
             <nav>
                 <ul>
                     <li><a href="/index.html">About Me</a></li>
-                    <li><a href="">Projects</a> </li>
-                    <li><a href="">Skills</a> </li>
+                    <li><a href="/index.html#projects">Projects</a> </li>
+                    <li><a href="/index.html#skills">Skills</a> </li>
                     <li><a href="/contact.html">Contact</a> </li>
                 </ul>
 
             </nav>
         </header>
         <main>
-            
+            <p>If you wish to contact me find follow the links below!</p>
+            <div class="image-container2">
+                <a href="https://www.linkedin.com/in/ben-pearson-084321246/" target="_blank">
+                <img src="media/images/icons/5305157_connection_linkedin_network_linkedin logo_icon.png" alt="linkedIn Logo">
+                </a>
+                <a href="mailto:benpea94@gmail.com?">
+                <img src="media/images/icons/4550857_email_gmail_mail_sending_yahoo_icon.png" alt='gmail logo'>
+                </a>
+                <a href="https://github.com/benpea94/Portfolio" target="_blank">
+                <img src="media/images/icons/211904_social_github_icon.png" alt="github Logo">
+                </a>
+            </div>
         </main>
 
         <footer></footer>
