added toggle switch light and dark

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Home Page</title>
+        <title>Ben Pearson Portfolio</title>
         <meta charset="utf-8">
-        <script src="script.js"></script>
+        <script src="script/script.js"></script>
         <link rel="stylesheet" href="css/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -144,7 +144,12 @@
         </main>
 
         <footer>
-        </footer>
+        <p>Toggle Light/Dark</p>
+        <label class="switch">
+          <input type="checkbox">
+          <span class="slider"></span>
+        </label>
+      </footer>
 
     </body>
 </html>
