--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,7 @@
             </nav>
         </header>
         <main>
+        
             <p>If you wish to contact me find follow the links below!</p>
             <div class="image-container2">
                 <a href="https://www.linkedin.com/in/ben-pearson-084321246/" target="_blank">
@@ -37,15 +38,19 @@
                 <a href="https://github.com/benpea94/Portfolio" target="_blank">
                 <img src="media/images/icons/211904_social_github_icon.png" alt="github Logo">
                 </a>
-            </div>
+            </div> 
+
         </main>
 
         <footer>
-            <p>Toggle Light/Dark</p>
-            <label class="switch">
-              <input type="checkbox">
-              <span class="slider"></span>
-            </label>
+            <div class="footer-left">
+              <p>Toggle Light/Dark</p>
+              <label class="switch">
+                <input type="checkbox">
+                <span class="slider"></span>
+              </label>
+            </div>
+            <p class="made-by">Made In London</p>
           </footer>
 
     </body>
