--- a/index.html
+++ b/index.html
@@ -144,12 +144,18 @@
         </main>
 
         <footer>
-        <p>Toggle Light/Dark</p>
-        <label class="switch">
-          <input type="checkbox">
-          <span class="slider"></span>
-        </label>
-      </footer>
+          <div class="footer-left">
+            <p>Toggle Light/Dark</p>
+            <label class="switch">
+              <input type="checkbox">
+              <span class="slider"></span>
+            </label>
+          </div>
+          <div class="footer-right">
+            <p class="made-by">Made In London</p>
+          </div>
+        </footer>
+        
 
     </body>
 </html>
