file path changes

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <h1>Ben Pearson</h1>
             <nav>
                 <ul>
-                    <li><a href="/index.html">About Me</a></li>
+                    <li><a href="index.html">About Me</a></li>
                     <li><a href="#projects">Projects</a> </li>
                     <li><a href="#skills">Skills</a> </li>
-                    <li><a href="/contact.html">Contact</a> </li>
+                    <li><a href="contact.html">Contact</a> </li>
                 </ul>
 
             </nav>
@@ -51,7 +51,7 @@
             <section class="projects-section" id ="projects">
               <div class="project">
                 <a href="https://github.com/benpea94/finalCapstone" target="_blank">
-                  <img src="/media/images/ShoeProject.jpg" alt="Shoe project code">
+                  <img src="media/images/ShoeProject.jpg" alt="Shoe project code">
                   <h3>Shoe Inventory Application</h3>
                   <p class="project-summary">The Shoe Inventory Application is a program designed to manage shoe inventory. The program allows the user to read and edit a shoe inventory.  This program makes use of OOP, for loops, while loops and error handling.</p>
                   <p class="project-tech">Technology used: Python</p>
@@ -60,7 +60,7 @@
               
               <div class="project">
                 <a href="https://github.com/benpea94/HTML-Projects/tree/master/Club" target="_blank">
-                  <img src="/media/images/ClubSite.jpg" alt="Club site">
+                  <img src="media/images/ClubSite.jpg" alt="Club site">
                   <h3>Club Site</h3>
                   <p class="project-summary">This HTML file showcases a visually appealing website for a fictional running club. It incorporates various styling techniques and responsive design. The use of flexbox ensures proper alignment, and media queries adapt the layout for smaller screens. The result is a visually engaging and responsive website.</p>
                   <p class="project-tech">Technology used: HTML, CSS</p>
@@ -69,7 +69,7 @@
               
               <div class="project">
                 <a href="https://github.com/benpea94/HTML-Projects/tree/master/TeaCosy" target="_blank">
-                  <img src="/media/images/TeaCosySite.jpg" alt="Tea Cosy site">
+                  <img src="media/images/TeaCosySite.jpg" alt="Tea Cosy site">
                   <h3>Tea Cosy Site</h3>
                   <p class="project-summary">A similar project to the running club site but for a cafe.  Making use of the flex wrap tehcnique to display images in a visually pleasing manner. </p>
                   <p class="project-tech">Technology used: HTML, CSS</p>
@@ -78,7 +78,7 @@
 
               <div class="project">
                 <a href="https://github.com/benpea94/task_manager/tree/main" target="_blank">
-                  <img src="/media/images/TaskManager.jpg" alt="Task Manager">
+                  <img src="media/images/TaskManager.jpg" alt="Task Manager">
                   <h3>Task Manager</h3>
                   <p class="project-summary">This is a Python script for managing tasks and users. It provides various functionalities such as registering new users, adding tasks, marking tasks as complete, editing tasks, and generating reports based on task completion and overdue tasks. </p>
                   <p class="project-tech">Technology used: Python</p>
