tinkering with files to troubleshoot link issues

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
     <head>
         <title>Contact Info Page</title>
         <meta charset="utf-8">
-        <script src="/script/script.js"></script>
+        <script src="script/script.js"></script>
         <link rel="stylesheet" href="css/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.googleapis.com">
