--- a/contact.html
+++ b/contact.html
@@ -17,10 +17,10 @@
             <h1>Ben Pearson</h1>
             <nav>
                 <ul>
-                    <li><a href="/index.html">About Me</a></li>
-                    <li><a href="/index.html#projects">Projects</a> </li>
-                    <li><a href="/index.html#skills">Skills</a> </li>
-                    <li><a href="/contact.html">Contact</a> </li>
+                    <li><a href="index.html">About Me</a></li>
+                    <li><a href="index.html#projects">Projects</a> </li>
+                    <li><a href="index.html#skills">Skills</a> </li>
+                    <li><a href="contact.html">Contact</a> </li>
                 </ul>
 
             </nav>
