change to about me content

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <h2 class="about-head">About Me</h2>
 
                 <p> 
-                    I am a hard-working and driven software engineer looking for an exciting new challenge.  I have worked as a freelance musician and tutor for over eleven years and I am now looking for a
+                    I am a hard-working and passionate aspiring software engineer looking for an exciting new challenge.  I have worked as a freelance musician and tutor for over eleven years and I am now looking for a
                     new role to focus my passion and dedication.
                 </p>
                 <p>
@@ -41,7 +41,7 @@
                   Since the completion of this course I have strengthened and diversified my skills by learning HTML, CSS and JavaScript.  
                 </p>
                 <p>
-                  In my spare time I still continue to play music professionaly in a blues band, gigging regularly across the south of England. 
+                  In my spare time I still continue to play music professionally in a blues band, gigging regularly across the south of England. 
                 </p>
                 </div>
                     <img id="me" src="media/images/me!!! 2.jpg" alt="picture of me">
